# C-CPP

./: README.md
BusStation/: main.c  test_bus_lines.c  test_bus_lines.h
Cypher-Decypher/: cipher  output.txt
Ex4/: Activation.cpp  Activation.h  Dense.cpp  Dense.h  Makefile  Matrix.cpp  mlpnetwork  presubmit.cpp
GenericMarkovChain/: CMakeLists.txt  ex3_sub.tar  makefile  markov_chain.c  seq_generator  snakes_and_ladders  tweets_generator.c
MachineLearning/: CMakeLists.txt  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  ex4_sub.tar  main.cpp
MarkovChain/: CMakeLists.txt  freq.txt  markov_chain.c  markov_chain.h  test.txt  tweets_generator
MovieRecommendationSystem/: CMakeLists.txt  Movie.cpp  RecommendationSystemLoader.cpp  RecommendationSystemLoader.h  UsersLoader.cpp
ex1/: CMakeLists.txt  cipher.c  ex1_sub.tar  input  main  main.c  tests.c
ex2/: CMakeLists.txt  ex2_sub.tar  sort_bus_lines.c  sort_bus_lines.h  sort_lines
ex3/: ex3_sub.tar  generic_tweets  justdoit_tweets.txt  tweets_generator.c
ex3new/: markov_chain.h  snakes_and_ladders.c  tweets_generator
ex5/: Movie.h  RecommendationSystem.cpp  RecommendationSystem.h  User.cpp  User.h  UsersLoader.h
